# wall

./: Cargo.toml  README.md
public/: 404.html  app.js  index.html  styles.css
src/: main.rs
src/args/: mod.rs
src/database/: mock.rs  mod.rs  sqlite.rs
src/entities/: msg.rs
src/integration/: mod.rs  telegram.rs
src/routers/: git_info.rs  mod.rs  msgs.rs  static_files.rs
src/utils/: html.rs
